# const-trig

./: Cargo.toml  README.md
src/: impls.rs  lib.rs  log.rs  pow.rs  rads_degs.rs  roots.rs  sine_cosine.rs
